--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,6 +300,40 @@
     "\n",
     "print(f\"\\n\\nNúmero de servidores requeridos para evitar la espera en cola: {SERVERS_2}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Task 4\n",
+    "\n",
+    "1. Capacidad de Atencion\n",
+    "    * En el escenario inicial de 2400 solicitudes por nminuto ambos proveedores pueden manejar la carga de trabajo sin mayor complicaciones\n",
+    "    * Sin embargo, con un aumento a 6,000 solicitudes por minuto, aunque ambos proveedores pudieron atender todas las solicitudes, la cantidad de tiempo que las solicitudes pasaron en cola fue significativamente alta, lo que indica un posible retraso en la atención al usuario.\n",
+    "\n",
+    "2. Tiempos de Cola\n",
+    "    * En el escenario de 6,000 solicitudes por minuto, el tiempo promedio en cola fue de aproximadamente 2.65 segundos para el Proveedor 1 y 2.64 segundos para el Proveedor 2. Esto puede ser una espera inaceptablemente larga para los usuarios y puede afectar negativamente la experiencia del usuario. Por loq ue se deberian buscar que los proveedores nos den mas servidores para que se puedan atender mas llamadas,\n",
+    "\n",
+    "3. Desempeño de Servidores:\n",
+    "\n",
+    "    * El Proveedor 1, con su servidor único pero potente, tuvo menos tiempo en cola en el escenario inicial, pero su desempeño se deterioró con la carga incrementada.\n",
+    "    * El Proveedor 2, con múltiples servidores, mostró una mejor distribución de la carga, especialmente en el escenario de alta carga.\n",
+    "\n",
+    "4. Tiempo Desocupado:\n",
+    "\n",
+    "    * En el escenario de alta carga, ambos proveedores mostraron un tiempo desocupado negativo, lo cual es un indicador de que los servidores estuvieron sobrecargados durante la simulación.\n",
+    "\n",
+    "5. Flexibilidad:\n",
+    "\n",
+    "    * El modelo de múltiples servidores del Proveedor 2 ofrece una mayor flexibilidad, ya que se puede escalar el número de servidores según la demanda. Esto puede ser especialmente beneficioso a medida que la aplicación crece en usuarios y tráfico.\n",
+    "\n",
+    "\n",
+    "6. Recomendación Final:\n",
+    "\n",
+    "    * Se recomienda considerar el Proveedor 2 (Pizzita computing) debido a su flexibilidad para escalar y su desempeño relativamente mejor en escenarios de alta carga.\n",
+    "    Sería prudente también explorar con cada proveedor las opciones para optimizar la configuración del servidor y mejorar el desempeño, especialmente en condiciones de alta carga.\n",
+    "    Además, se recomienda tener una discusión detallada sobre los costos con ambos proveedores para tomar una decisión informada que también sea económicamente viable para el proyecto."
+   ]
   }
  ],
  "metadata": {
@@ -318,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
