add: bullets recomendacion final

--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -331,8 +331,8 @@
     "6. Recomendación Final:\n",
     "\n",
     "    * Se recomienda considerar el Proveedor 2 (Pizzita computing) debido a su flexibilidad para escalar y su desempeño relativamente mejor en escenarios de alta carga.\n",
-    "    Sería prudente también explorar con cada proveedor las opciones para optimizar la configuración del servidor y mejorar el desempeño, especialmente en condiciones de alta carga.\n",
-    "    Además, se recomienda tener una discusión detallada sobre los costos con ambos proveedores para tomar una decisión informada que también sea económicamente viable para el proyecto."
+    "    * Sería prudente también explorar con cada proveedor las opciones para optimizar la configuración del servidor y mejorar el desempeño, especialmente en condiciones de alta carga.\n",
+    "    * Además, se recomienda tener una discusión detallada sobre los costos con ambos proveedores para tomar una decisión informada que también sea económicamente viable para el proyecto."
    ]
   }
  ],
